infra/k3s/manifests/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: f33d3r
  labels:
    name: f33d3r
    environment: production
    managed-by: f33d3r-ci

---
apiVersion: v1
kind: Namespace
metadata:
  name: f33d3r-infra
  labels:
    name: f33d3r-infra
    environment: production
    managed-by: f33d3r-ci
